Added basic routing for login and calc box components, added example icons and material card

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,1 +1,4 @@
-<button>Home</button>
+<nav>
+  <a routerLink="/login-route" routerLinkActive="active">Login</a>
+  <a routerLink="/calc-box-route">Calculator</a>
+</nav>
