--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
   <app-side-bar></app-side-bar>
 </div>
 <div class="content">
-  <app-calc-box></app-calc-box>
+  <router-outlet></router-outlet>
 </div>
