--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -1,3 +1,20 @@
 <p>
   calc-box works!
+
+  <i class="material-icons" md-48>add</i>
+  <i class="material-icons" md-36>edit</i>
 </p>
+
+
+
+
+<!--<form class="example-form">-->
+  <!--<md-form-field class="example-full-width">-->
+    <!--<input mdInput [food]="currentFood" placeholder="Favorite food" value="Sushi">-->
+  <!--</md-form-field>-->
+  <!--<br />-->
+  <!--<button (click)="inputClicked($event)"><i class="material-icons" md-36>input</i>Calculate</button>-->
+<!--</form>-->
+
+
+
