Updated sidebar buttons

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,4 +1,10 @@
 <nav>
-  <a routerLink="/login-route" routerLinkActive="active">Login</a>
-  <a routerLink="/calc-box-route">Calculator</a>
+  <ul>
+    <li>
+      <button md-raised-button color="primary" routerLink="/login-route" routerLinkActive="active">Login</button>
+    </li>
+    <li>
+      <button md-raised-button color="primary" routerLink="/calc-box-route">Calculator</button>
+    </li>
+  </ul>
 </nav>
