Added card to calcbox component

--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -1,19 +1,19 @@
-<p>
-  calc-box works!
+<md-card class="contentCard">
+  <p>
+    calc-box works!
 
-  <i class="material-icons" md-48>add</i>
-  <i class="material-icons" md-36>edit</i>
-</p>
-
-
+    <i class="material-icons" md-48>add</i>
+    <i class="material-icons" md-36>edit</i>
+  </p>
+</md-card>
 
 
 <!--<form class="example-form">-->
-  <!--<md-form-field class="example-full-width">-->
-    <!--<input mdInput [food]="currentFood" placeholder="Favorite food" value="Sushi">-->
-  <!--</md-form-field>-->
-  <!--<br />-->
-  <!--<button (click)="inputClicked($event)"><i class="material-icons" md-36>input</i>Calculate</button>-->
+<!--<md-form-field class="example-full-width">-->
+<!--<input mdInput [food]="currentFood" placeholder="Favorite food" value="Sushi">-->
+<!--</md-form-field>-->
+<!--<br />-->
+<!--<button (click)="inputClicked($event)"><i class="material-icons" md-36>input</i>Calculate</button>-->
 <!--</form>-->
 
 
