--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,13 +11,13 @@
   height: 100%;
   position: absolute;
   top: 150px;
+  z-index: 1;
 }
 
 .content {
   background-color: blanchedalmond;
   width: 100%;
   height: 100%;
-  margin-left: 150px;
   top: 150px;
   position: absolute;
 
