--- a/src/app/calc-box/calc-box.component.css
+++ b/src/app/calc-box/calc-box.component.css
@@ -2,4 +2,13 @@
   margin:20px;
   width:250px;
   height:150px;
+  left:150px;
+}
+
+.weightOnBarbellBox{
+  position: relative;
+  font-weight: bold;
+  font-size: 15px;
+  width:300px;
+  left: -5px;
 }
