Created favicon and put barbell on webpage with SVG

--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -26,8 +26,11 @@
     <input type="button" id="calculateTargetWeightButton" value="Calculate"/>
 
 
-    <div id=barbell></div>
-    <br/>
+    <svg id ="svgresult" width="550" height="250">
+      <rect id="thebar" width="600" height="10" x="100" y="50"></rect>
+
+    </svg>
+
 
     <div id="words"></div>
   </div>
