Added jquery and css changes

--- a/src/app/calc-box/calc-box.component.css
+++ b/src/app/calc-box/calc-box.component.css
@@ -21,3 +21,13 @@
   fill:gray;
 }
 
+.plate{
+  fill:black;
+}
+
+.plateLabel{
+  fill: white;
+  font-weight:bold;
+  font-size:20px;
+  text-anchor: middle;
+}
