Create test component for testing svg

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -6,5 +6,8 @@
     <li>
       <button md-raised-button color="primary" routerLink="/calc-box-route">Calculator</button>
     </li>
+    <li>
+      <button md-raised-button color="primary" routerLink="/test-route">Test</button>
+    </li>
   </ul>
 </nav>
