--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -14,36 +14,36 @@
   2.5's: {{twoPointFives}}
   <br />
 
-  <table style="border: none;height:100px">
+  <table>
     <tr style="height:100px">
       <td>
-        <div  *ngIf="blanks > 0" [ngStyle]="{'backgroundColor': '#000', 'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
+        <div  *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
       </td>
       <td *ngFor="let weight of leftWeights" style="color: #FFF">
-        <div [ngStyle]="{'backgroundColor':'#000', 'textAlign':'center', 'width': '25px', 'height': weight / standardHeight + 20 + '%'}">
+        <div [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
           {{weight}}
         </div>
       </td>
     </tr>
   </table>
 
-  <table style="border: none;height:100px;width:300px">
+  <table style="width: 300px;">
     <tr>
       <td>
-        <div style="background-color:#000;height:10%"></div>
+        <div style="height:10%"></div>
       </td>
     </tr>
   </table>
 
-  <table style="border: none;height:100px">
+  <table>
     <tr>
       <td *ngFor="let weight of rightWeights" style="color: #FFF">
-        <div [ngStyle]="{'backgroundColor':'#000', 'textAlign':'center', 'width': '25px', 'height': weight / standardHeight + 20 + '%'}">
+        <div [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
           {{weight}}
         </div>
       </td>
       <td>
-        <div  *ngIf="blanks > 0" [ngStyle]="{'backgroundColor': '#000', 'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
+        <div  *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
       </td>
     </tr>
   </table>
