CSS changes for calc box component

--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -9,27 +9,28 @@
   <md-grid-list cols="2" rowHeight="200px" style="display:flex">
 
     <md-grid-tile>
-      <div style="width=200px">
-        <label for="lbPlates45">45lb Plates: </label>
-        <label id="lbPlates45">0</label>
-        <br/>
-
-        <label for="lbPlates25">25lb Plates: </label>
-        <label id="lbPlates25">0</label>
-        <br/>
-
-        <label for="lbPlates10">10lb Plates: </label>
-        <label id="lbPlates10">0</label>
-        <br/>
-
-        <label for="lbPlates5">5lb Plates: </label>
-        <label id="lbPlates5">0</label>
-        <br/>
-
-        <label for="lbPlates2point5">2.5lb Plates: </label>
-        <label id="lbPlates2point5">0</label>
-        <br/>
-      </div>
+    <table id="plateCount" style = "border-color: purple; border-style: double; padding: 10px">
+      <tr>
+        <td><label for="lbPlates45">45lb Plates: </label></td>
+        <td><label id="lbPlates45">0</label></td>
+      </tr>
+      <tr>
+        <td><label for="lbPlates25">25lb Plates: </label></td>
+        <td><label id="lbPlates25">0</label></td>
+      </tr>
+      <tr>
+        <td><label for="lbPlates10">10lb Plates: </label></td>
+        <td><label id="lbPlates10">0</label></td>
+      </tr>
+      <tr>
+        <td><label for="lbPlates5">5lb Plates: </label></td>
+        <td><label id="lbPlates5">0</label></td>
+      </tr>
+      <tr>
+      <td><label for="lbPlates2point5">2.5lb Plates: </label></td>
+      <td><label id="lbPlates2point5">0</label></td>
+      </tr>
+    </table>
     </md-grid-tile>
     <md-grid-tile>
       <div>
