--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,16 +2,17 @@
   background-color: blue;
   width: 100%;
   height: 150px;
-  position: absolute;
+  position: fixed;
+  z-index: 0;
 }
 
 .sideBar {
   background-color: gray;
   width: 150px;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 150px;
-  z-index: 1;
+  z-index: 0;
 }
 
 .content {
@@ -20,4 +21,5 @@
   height: 100%;
   top: 150px;
   position: absolute;
+  z-index: -1;
 }
