--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -1,42 +1,64 @@
-<md-card class="contentCard">
-  <form [formGroup]="calcForm" (ngSubmit)="getWeightCalc($event)">
+<md-card class="calcFormCard">
+  <form [formGroup]="calcForm" (ngSubmit)="calculateWeight()">
     <input formControlName="targetWeightText" type="email" placeholder="Target Weight">
     <button>Calculate</button>
   </form>
 </md-card>
 
-<md-card class="infoCard">
-  <md-grid-list cols="2" rowHeight="200px" style="display:flex">
+<md-card class="contentCard">
+  <div class="infoDiv">
 
-    <md-grid-tile>
-      <div style="width=200px">
-        <label for="lbPlates45">45lb Plates: </label>
-        <label id="lbPlates45">0</label>
-        <br/>
+    <a>45's: {{fortyFives}}</a>
+    25's: {{twentyFives}}
+    <a>
+      10's: {{tens}}
+    </a>
+    <a>
+      5's: {{fives}}
+    </a>
+    <a>
+      2.5's: {{twoPointFives}}
+    </a>
 
-        <label for="lbPlates25">25lb Plates: </label>
-        <label id="lbPlates25">0</label>
-        <br/>
+    <a>
+      <h2>Total Weight: {{totalWeight}}</h2>
+    </a>
+  </div>
+  <br/>
 
-        <label for="lbPlates10">10lb Plates: </label>
-        <label id="lbPlates10">0</label>
-        <br/>
+  <div class="barbellDiv">
+    <table>
+      <tr style="height:100px">
+        <td>
+          <div class="blanks" *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
+        </td>
+        <td *ngFor="let weight of leftWeights" style="color: #FFF">
+          <div class="weights" [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
+            {{weight}}
+          </div>
+        </td>
+      </tr>
+    </table>
 
-        <label for="lbPlates5">5lb Plates: </label>
-        <label id="lbPlates5">0</label>
-        <br/>
+    <table style="width: 300px;">
+      <tr>
+        <td>
+          <div style="height:10%"></div>
+        </td>
+      </tr>
+    </table>
 
-        <label for="lbPlates2point5">2.5lb Plates: </label>
-        <label id="lbPlates2point5">0</label>
-        <br/>
-      </div>
-    </md-grid-tile>
-    <md-grid-tile>
-      <div>
-        <svg id="svgresult" width="550">
-          <rect id="thebar" width="450" height="10" x="50" y="70"></rect>
-        </svg>
-      </div>
-    </md-grid-tile>
-  </md-grid-list>
+    <table>
+      <tr>
+        <td *ngFor="let weight of rightWeights" style="color: #FFF">
+          <div class="weights" [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
+            {{weight}}
+          </div>
+        </td>
+        <td>
+          <div class="blanks" *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
+        </td>
+      </tr>
+    </table>
+  </div>
 </md-card>
