--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,53 +1,3 @@
-<md-card class="contentCard" style="display:flex">
-  45's: {{fortyFives}}
-  <br />
-
-  25's: {{twentyFives}}
-  <br />
-
-  10's: {{tens}}
-  <br />
-
-  5's: {{fives}}
-  <br />
-
-  2.5's: {{twoPointFives}}
-  <br />
-
-  <table>
-    <tr style="height:100px">
-      <td>
-        <div  *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
-      </td>
-      <td *ngFor="let weight of leftWeights" style="color: #FFF">
-        <div [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
-          {{weight}}
-        </div>
-      </td>
-    </tr>
-  </table>
-
-  <table style="width: 300px;">
-    <tr>
-      <td>
-        <div style="height:10%"></div>
-      </td>
-    </tr>
-  </table>
-
-  <table>
-    <tr>
-      <td *ngFor="let weight of rightWeights" style="color: #FFF">
-        <div [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
-          {{weight}}
-        </div>
-      </td>
-      <td>
-        <div  *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
-      </td>
-    </tr>
-  </table>
-  <br />
-
-  <h2>Total Weight: {{totalWeight}}</h2>
+<md-card class="contentCard">
+  {{serviceValue}}
 </md-card>
