--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -6,23 +6,28 @@
 </md-card>
 
 <md-card class="contentCard">
-  <div class="infoDiv">
-    <a>45's: {{fortyFives}}</a>
-    25's: {{twentyFives}}
-    <a>
-      10's: {{tens}}
-    </a>
-    <a>
-      5's: {{fives}}
-    </a>
-    <a>
-      2.5's: {{twoPointFives}}
-    </a>
-
-    <a>
-      <h2>Total Weight: {{totalWeight}}</h2>
-    </a>
-  </div>
+  <table class="plateCount">
+    <tr>
+      <td>45lb Plates: </td>
+      <td>{{fortyFives}}</td>
+    </tr>
+    <tr>
+      <td>25lb Plates: </td>
+      <td>{{twentyFives}}</td>
+    </tr>
+    <tr>
+      <td>10lb Plates: </td>
+      <td>{{tens}}</td>
+    </tr>
+    <tr>
+      <td>5lb Plates: </td>
+      <td>{{fives}}</td>
+    </tr>
+    <tr>
+      <td>2.5lb Plates: </td>
+      <td>{{twoPointFives}}</td>
+    </tr>
+  </table>
   <br/>
 
   <div class="barbellDiv">
