Added total back

--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -28,6 +28,9 @@
       <td>{{twoPointFives}}</td>
     </tr>
   </table>
+  <a>
+    <h2>Total Weight: {{totalWeight}}</h2>
+  </a>
   <br/>
 
   <div class="barbellDiv">
