Default all values to 0, don't show bar if less that 50 lbs

--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -33,7 +33,7 @@
   </a>
   <br/>
 
-  <div class="barbellDiv">
+  <div *ngIf="blanks < 20" class="barbellDiv">
     <table>
       <tr style="height:100px">
         <td>
