--- a/src/app/calc-box/calc-box.component.html
+++ b/src/app/calc-box/calc-box.component.html
@@ -18,83 +18,91 @@
 </md-card>
 
 <md-card class="contentCard">
-  <div>
-    <table class="plateCount">
-      <tr *ngIf="hundredPlate">
-        <td>100lb Plates:</td>
-        <td>{{hundreds}}</td>
-      </tr>
-      <tr *ngIf="fiftyFivePlate">
-        <td>55lb Plates:</td>
-        <td>{{fiftyFives}}</td>
-      </tr>
-      <tr *ngIf="fortyFivePlate">
-        <td>45lb Plates:</td>
-        <td>{{fortyFives}}</td>
-      </tr>
-      <tr *ngIf="thirtyFivePlate">
-        <td>35lb Plates:</td>
-        <td>{{thirtyFives}}</td>
-      </tr>
-      <tr *ngIf="twentyFivePlate">
-        <td>25lb Plates:</td>
-        <td>{{twentyFives}}</td>
-      </tr>
-      <tr *ngIf="tenPlate">
-        <td>10lb Plates:</td>
-        <td>{{tens}}</td>
-      </tr>
-      <tr *ngIf="fivePlate">
-        <td>5lb Plates:</td>
-        <td>{{fives}}</td>
-      </tr>
-      <tr *ngIf="twoPointFivePlate">
-        <td>2.5lb Plates:</td>
-        <td>{{twoPointFives}}</td>
-      </tr>
-      <tr *ngIf="onePointTwoFivePlate">
-        <td>1.25lb Plates:</td>
-        <td>{{onePointTwoFives}}</td>
-      </tr>
-    </table>
-    <a>
-      <h2>Total Weight: {{totalWeight}}</h2>
-    </a>
-    <br/>
-  </div>
-  <div *ngIf="blanks < 20" class="barbellDiv">
-    <table>
-      <tr style="height:100px">
-        <td>
-          <div class="blanks" *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
-        </td>
-        <td *ngFor="let weight of leftWeights" style="color: #FFF">
-          <div class="weights" [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
-            {{weight}}
-          </div>
-        </td>
-      </tr>
-    </table>
+  <div class="flex-container" fxLayout = "row wrap">
+    <div  fxFlex="75%" fxLayout = "column">
+      <table class="plateCount">
+        <tr *ngIf="hundredPlate">
+          <td>100lb Plates:</td>
+          <td>{{hundreds}}</td>
+        </tr>
+        <tr *ngIf="fiftyFivePlate">
+          <td>55lb Plates:</td>
+          <td>{{fiftyFives}}</td>
+        </tr>
+        <tr *ngIf="fortyFivePlate">
+          <td>45lb Plates:</td>
+          <td>{{fortyFives}}</td>
+        </tr>
+        <tr *ngIf="thirtyFivePlate">
+          <td>35lb Plates:</td>
+          <td>{{thirtyFives}}</td>
+        </tr>
+        <tr *ngIf="twentyFivePlate">
+          <td>25lb Plates:</td>
+          <td>{{twentyFives}}</td>
+        </tr>
+        <tr *ngIf="tenPlate">
+          <td>10lb Plates:</td>
+          <td>{{tens}}</td>
+        </tr>
+        <tr *ngIf="fivePlate">
+          <td>5lb Plates:</td>
+          <td>{{fives}}</td>
+        </tr>
+        <tr *ngIf="twoPointFivePlate">
+          <td>2.5lb Plates:</td>
+          <td>{{twoPointFives}}</td>
+        </tr>
+        <tr *ngIf="onePointTwoFivePlate">
+          <td>1.25lb Plates:</td>
+          <td>{{onePointTwoFives}}</td>
+        </tr>
+      </table>
+    </div>
+    <div>
+      <a>
+        <h2>Total Weight: {{totalWeight}}</h2>
+      </a>
+      <br/>
+    </div>
 
-    <table style="width: 300px;">
-      <tr>
-        <td>
-          <div style="height:10%"></div>
-        </td>
-      </tr>
-    </table>
 
-    <table>
-      <tr style="height:100px">
-        <td *ngFor="let weight of rightWeights" style="color: #FFF">
-          <div class="weights" [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
-            {{weight}}
-          </div>
-        </td>
-        <td>
-          <div class="blanks" *ngIf="blanks > 0" [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
-        </td>
-      </tr>
-    </table>
-  </div>
+      <div *ngIf="blanks < 20" class="barbellDiv">
+        <table>
+          <tr style="height:100px">
+            <td>
+              <div class="blanks" *ngIf="blanks > 0"
+                   [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
+            </td>
+            <td *ngFor="let weight of leftWeights" style="color: #FFF">
+              <div class="weights" [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
+                {{weight}}
+              </div>
+            </td>
+          </tr>
+        </table>
+
+        <table style="width: 300px;">
+          <tr>
+            <td>
+              <div style="height:10%"></div>
+            </td>
+          </tr>
+        </table>
+
+        <table>
+          <tr style="height:100px">
+            <td *ngFor="let weight of rightWeights" style="color: #FFF">
+              <div class="weights" [ngStyle]="{'height': weight / standardHeight + 20 + '%', 'width': '25px'}">
+                {{weight}}
+              </div>
+            </td>
+            <td>
+              <div class="blanks" *ngIf="blanks > 0"
+                   [ngStyle]="{'height' : '10%', 'width' : blanks / 2 * 20 + 'px'}"></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
 </md-card>
