--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,13 +1,13 @@
 <nav>
   <ul>
-    <li>
-      <button md-raised-button color="primary" routerLink="/login-route" routerLinkActive="active">Login</button>
+    <li *ngIf="!isLoggedIn">
+      <button md-raised-button color="primary" (click)="checkLogin()" routerLink="/login-route" routerLinkActive="active">Login</button>
     </li>
-    <li>
-      <button md-raised-button color="primary" routerLink="/calc-box-route">Calculator</button>
+    <li *ngIf="isLoggedIn">
+      <button md-raised-button color="primary" (click)="checkLogin()" routerLink="/calc-box-route">Calculator</button>
     </li>
-    <li>
-      <button md-raised-button color="primary" routerLink="/test-route">Test</button>
+    <li *ngIf="isLoggedIn">
+      <button md-raised-button color="primary" (click)="checkLogin()" routerLink="/test-route">Test</button>
     </li>
   </ul>
 </nav>
