Temp-fix login button, work on table, discuss

--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -13,24 +13,18 @@ input, button{
   margin:5px;
 }
 .squatGraph {
-  margin: 20px;
-  width: 83%;
-  height: 50px;
-  left: 150px;
+  margin-left: 170px;
+  width: 50%
 }
 
 .benchGraph{
-  margin: 20px;
-  width: 83%;
-  height: 50px;
-  left: 150px;
+  margin-left: 170px;
+  width: 50%
 }
 
 .deadLiftGraph{
-  margin: 20px;
-  width: 83%;
-  height: 50px;
-  left: 150px;
+  margin-left: 170px;
+  width: 50%
 }
 
 .saveButton{
